--- a/web/pages/index.html
+++ b/web/pages/index.html
@@ -25,27 +25,7 @@
         <!--<script src="/resources/js/logout.js"></script>-->
     </head>
     <body>
-        <section name="navigationBar">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <div class="d-flex flex-row">
-                    <a class="navbar-brand" href="#">
-                        <p style="color:white; font-family:Ubuntu; font-weight:bolder; letter-spacing:-2.0px; font-size: 180%!important; margin-top:-5%!important; margin-bottom:-5%!important;" >help<span class="text-primary">y</span></p>
-                    </a>
-                    <button class="navbar-toggler btnMenuBars" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" >
-                        <span>
-                            <i class="material-icons bars menuFourBars" style="font-size:300%; color:black;">menu</i>
-                        </span>
-                    </button><!-- /.navbar-toggler -->
-                </div><!-- /.d-flex flex-row -->
-                <div class="collapse navbar-collapse mt-1" id="navbarSupportedContent">
-                    <div class="navbar-text mr-auto navbarHelpyLink ml-3">
-                        <a href="#" class="mr-2 nowLink helpyLink ">Now</a>
-                        <a href="#" class="mr-2 partnersLink helpyLink">Partners</a>
-                        <a href="#" class="mr-2 rentsLink helpyLink">Rent</a>
-                    </div><!-- /.navbarHelpyLink -->
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a class="nav-link" href="#">Opportunities</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Administrator Profile</a></li>
+        <section name="modalTermsAndCondition">
             <div class="modal fade" id="logOutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
@@ -54,26 +34,22 @@
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
-                        </div>
-                        <div class="modal-body">
-                            Are you sure you want to sign out your account?
-                        </div>
+                        </div><!-- /.modal-header -->
+                        <div class="modal-body">Are you sure you want to sign out your account?</div>
                         <div class="modal-footer" style="background:transparent; ">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                             <button type="button" class="btn btn-warning text-light logoutBtn">Yes, sign me out</button>
-                        </div>
-                    </div>
-                </div>
-            </div>	
+                        </div><!-- /.modal-footer -->
+                    </div><!-- /.modal-content -->
+                </div><!--/.modal-dialog -->
+            </div><!-- /#logOutModal -->
             <div class="modal fade bd-example-modal-lg" id="termsAndConditionModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title">Terms and Condition</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        </div><!-- /.modal-header -->
                         <div class="modal-body" id="termsAndCondition" style="font-size:90%!important;">
                             <p class="lead" style="font-size:110%!important;">
                                 <small>
@@ -82,7 +58,7 @@
                                     </strong>
                                     please read these terms carefully. By using the Service (as defined below), you agree that you have read, understood, accepted and agreed with the Terms of Use. You further agree to the representations made by yourself below. If you do not agree to or fall within the Terms of Use of the Service and wish to discontinue using the Service, please do not continue using the Application (as defined below) or the Service.
                                 </small>
-                            </p>
+                            </p><!-- /.load -->
                             <p class="text-justify ml-1 mr-1" style="font-size:85%!important;">
                                 THE COMPANY IS A PLATFORM COMPANY THAT DOES NOT PROVIDE DELIVERY SERVICES AND THE COMPANY IS NOT A TRANSPORTATION PROVIDER. IT IS UP TO THE THIRD PARTY DELIVERY PROVIDERS TO OFFER DELIVERY SERVICES TO YOU AND IT IS UP TO YOU TO ACCEPT SUCH TRANSPORTATION SERVICES. THE SERVICE OF THE COMPANY IS TO LINK YOU WITH SUCH THIRD PARTY TRANSPORTATION PROVIDERS, BUT DOES NOT NOR IS IT INTENDED TO PROVIDE TRANSPORTATION SERVICES OR ANY ACT THAT CAN BE CONSTRUED IN ANY WAY AS AN ACT OF A TRANSPORTATION PROVIDER. THE COMPANY IS NOT RESPONSIBLE NOR LIABLE FOR THE ACTS AND/OR OMISSIONS OF ANY THIRD PARTY TRANSPORTATION PROVIDER AND/OR ANY TRANSPORTATION SERVICES PROVIDED TO YOU.				
                             </p>
@@ -95,20 +71,11 @@
                                 You shall maintain in confidence all information and data relating to the Company, its services, products, business affairs, marketing and promotion plans or other operations and its associated companies which are disclosed to you by or on behalf of the Company (whether orally or in writing and whether before, on or after the date of this Agreement) or which are otherwise directly or indirectly acquired by you from the Company, or any of its affiliated companies, or created in the course of this Agreement. You shall further ensure that it, its officers, employees and agents only use such confidential information in order to perform the Service, and shall not without the Company's prior written consent, disclose such information to any third-party nor use it for any other purpose. You shall only disclose such information to such officers, employees and agents as need to know it to fulfil its obligations under this Agreement.
                                 The above obligations of confidentiality shall not apply to the extent that you can show that the relevant information:
                             </p>
-                            <ul style="font-size:90%!important; margin-top:-2%!important;" class="ml-4">					
-
-                                <li>
-                                    was at the time of receipt already in your possession;
-                                </li>
-                                <li>
-                                    is, or becomes in the future, public knowledge through no fault or omission of you;
-                                </li>
-                                <li>
-                                    was received from a third-party having the right to disclose it; or
-                                </li>
-                                <li>
-                                    is required to be disclosed by law.
-                                </li>
+                            <ul style="font-size:90%!important; margin-top:-2%!important;" class="ml-4">
+                                <li>was at the time of receipt already in your possession;</li>
+                                <li>is, or becomes in the future, public knowledge through no fault or omission of you;</li>
+                                <li>was received from  a third-party having the right to disclose it; or</li>
+                                <li>is required to be disclosed by law.</li>
                             </ul>
                             <p class="text-justify ml-1 mr-1" style="font-size:85%!important;">
                                 THE COMPANY MAKES NO REPRESENTATION, WARRANTY, OR GUARANTEE AS TO THE RELIABILITY, TIMELINESS, QUALITY, SUITABILITY, AVAILABILITY, ACCURACY OR COMPLETENESS OF THE SERVICE, THE APPLICATION, THE SOFTWARE, AND/OR THE REWARDS. THE COMPANY DOES NOT REPRESENT OR WARRANT THAT (A) THE USE OF THE SERVICE, THE APPLICATION AND/OR THE SOFTWARE WILL BE SECURE, TIMELY, UNINTERRUPTED OR ERROR-FREE OR OPERATE IN COMBINATION WITH ANY OTHER HARDWARE, SOFTWARE, SYSTEM OR DATA, (B) THE SERVICE WILL MEET YOUR REQUIREMENTS OR EXPECTATIONS, (C) ANY STORED DATA WILL BE ACCURATE OR RELIABLE, (D) THE QUALITY OF ANY PRODUCTS, SERVICES, INFORMATION, REWARDS OR OTHER MATERIALS PURCHASED OR OBTAINED BY YOU THROUGH THE APPLICATION WILL MEET YOUR REQUIREMENTS OR EXPECTATIONS, (E) ERRORS OR DEFECTS IN WEBSITE  WILL BE CORRECTED, OR (F) THE APPLICATION OR THE SERVER(S) THAT MAKE THE APPLICATION AVAILABLE ARE FREE OF VIRUSES OR OTHER HARMFUL COMPONENTS.
@@ -137,13 +104,14 @@
                                 Rented items are available for service starting at 9 am to 7pm. An item will only be considered reserved when there is a payment deposited to the system for the item. Items can be rented in an interval of 24 hours. When the item is not returned on the appointed time it will be considered rented for the next 24 hours. However, there will be a grace period of 15 mins from the exact time on the system.  Request for items to be put aside or reserved before payments will not be entertained by the administration. After payment has been made, customers can give a time slot they wish to pick up the item. Items values are shown to customers on the site before they avail of the item. 
                                 By availing of the item it is under duly diligence of the client to take care of the item. If anything becomes broken or lost during the time it is borrowed, the item's displayed value must be played by the client to the system. In the case of failure to pay due amount to the helpy website the admin put their accounts on hold till the due balance is paid. Failure to pay will result in filing the collection of the due amount through legal means using the terms and conditions as legal binding. Before handed off to the customer the customer and admin on site will inspect the item for effectiveness and functionality of the item. Anything that can decrease the item's value such as smoothness, color etc. will be shown before handing of the item. When the item will be returned there will be another inspection of the item to see if the item is return in the condition it was given.  				
                             </p>
-                        </div>
+                        </div><!-- /#termsAndCondition -->
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <a href="signup.html" class="btn btn-primary registerNow">I Agree and Proceed</a>
-                        </div>			  
-                    </div>
-                </div>
+                            <a href="#" class="btn btn-primary registerNow">I Agree and Proceed</a>
+                        </div><!-- /.modal-footer -->
+                    </div><!-- /.modal-content -->
+                </div><!-- /.modal-dialog modal-lg -->
+            </div><!-- /#termsAndConditionModal -->
         </section><!-- modalTermsAndCondition -->
         <section name="navigationBar">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -167,7 +135,7 @@
                         <li class="nav-item"><a class="nav-link" href="#">Opportunities</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Administrator Profile</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Log In</a></li>
-                        <li class="nav-item"><button class="btn btn-outline-primary" type="button"> <!-- data-toggle="modal" data-target="#termsAndConditionModal" --> Join us</button></li>
+                        <li class="nav-item"><button id="joinUsBtn" class="btn btn-outline-primary" type="button" data-toggle="modal" data-target="#termsAndConditionModal">Join us</button></li>
                     </ul><!-- /.navbar-nav -->
                 </div><!-- /#navbarSupportedContent -->
             </nav><!-- /.navbar -->
