Opportunities page finished. Edited the rest of the file to link each html page. Next is the Login page.

--- a/web/pages/adminProfile.html
+++ b/web/pages/adminProfile.html
@@ -186,7 +186,7 @@ and open the template in the editor.
                         <a href="#" class="mr-2 rentsLink helpyLink">Rent</a>
                     </div><!-- /.navbarHelpyLink -->
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a class="nav-link" href="#">Opportunities</a></li>
+                        <li class="nav-item"><a class="nav-link" href="opportunities.html">Opportunities</a></li>
                         <li class="nav-item"><a class="nav-link" href="adminProfile.html">Administrator Profile</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Log In</a></li>
                         <li class="nav-item"><button id="joinUsBtn" class="btn btn-outline-primary" type="button" data-toggle="modal" data-target="#termsAndConditionModal">Join us</button></li>
