Updated all links.

--- a/web/pages/login.html
+++ b/web/pages/login.html
@@ -220,7 +220,7 @@ and open the template in the editor.
                         </div><!-- /#termsAndCondition -->
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <a href="#" class="btn btn-primary registerNow">I Agree and Proceed</a>
+                            <a href="signup.html" class="btn btn-primary registerNow">I Agree and Proceed</a>
                         </div><!-- /.modal-footer -->
                     </div><!-- /.modal-content -->
                 </div><!-- /.modal-dialog modal-lg -->
@@ -247,7 +247,7 @@ and open the template in the editor.
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link" href="opportunities.html">Opportunities</a></li>
                         <li class="nav-item"><a class="nav-link" href="adminProfile.html">Administrator Profile</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Log In</a></li>
+                        <li class="nav-item"><a class="nav-link" href="login.html">Log In</a></li>
                         <li class="nav-item"><button id="joinUsBtn" class="btn btn-outline-primary" type="button" data-toggle="modal" data-target="#termsAndConditionModal">Join us</button></li>
                     </ul><!-- /.navbar-nav -->
                 </div><!-- /#navbarSupportedContent -->
@@ -277,7 +277,7 @@ and open the template in the editor.
                                     </div>
                                     <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Log in</button>
                                     <hr class="my-4">
-                                    <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Become a member</button>
+                                    <button id="joinUsBtn" class="btn btn-lg btn-primary btn-block text-uppercase" type="button" data-toggle="modal" data-target="#termsAndConditionModal">Become a member</button>
                                     <hr class="my-4">
                                     <button class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i class="fab fa-google mr-2"></i> Sign in with Google</button>
                                     <button class="btn btn-lg btn-facebook btn-block text-uppercase" type="submit"><i class="fab fa-facebook-f mr-2"></i> Sign in with Facebook</button>
