--- a/web/pages/adminProfile.html
+++ b/web/pages/adminProfile.html
@@ -161,7 +161,7 @@ and open the template in the editor.
                         </div><!-- /#termsAndCondition -->
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <a href="#" class="btn btn-primary registerNow">I Agree and Proceed</a>
+                            <a href="signup.html" class="btn btn-primary registerNow">I Agree and Proceed</a>
                         </div><!-- /.modal-footer -->
                     </div><!-- /.modal-content -->
                 </div><!-- /.modal-dialog modal-lg -->
@@ -188,7 +188,7 @@ and open the template in the editor.
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link" href="opportunities.html">Opportunities</a></li>
                         <li class="nav-item"><a class="nav-link" href="adminProfile.html">Administrator Profile</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Log In</a></li>
+                        <li class="nav-item"><a class="nav-link" href="login.html">Log In</a></li>
                         <li class="nav-item"><button id="joinUsBtn" class="btn btn-outline-primary" type="button" data-toggle="modal" data-target="#termsAndConditionModal">Join us</button></li>
                     </ul><!-- /.navbar-nav -->
                 </div><!-- /#navbarSupportedContent -->
