--- a/web/pages/login.html
+++ b/web/pages/login.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Sign in | Helpy</title>
+        <title>Log In | Helpy</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="../resources/img/LG_Logo_White.png"  />
@@ -275,12 +275,12 @@ and open the template in the editor.
                                         <input type="checkbox" class="custom-control-input" id="customCheck1">
                                         <label class="custom-control-label" for="customCheck1">Remember password</label>
                                     </div>
-                                    <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Log in</button>
+                                    <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Log In</button>
                                     <hr class="my-4">
                                     <button id="joinUsBtn" class="btn btn-lg btn-primary btn-block text-uppercase" type="button" data-toggle="modal" data-target="#termsAndConditionModal">Become a member</button>
                                     <hr class="my-4">
-                                    <button class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i class="fab fa-google mr-2"></i> Sign in with Google</button>
-                                    <button class="btn btn-lg btn-facebook btn-block text-uppercase" type="submit"><i class="fab fa-facebook-f mr-2"></i> Sign in with Facebook</button>
+                                    <button class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i class="fab fa-google mr-2"></i> Log In with Google</button>
+                                    <button class="btn btn-lg btn-facebook btn-block text-uppercase" type="submit"><i class="fab fa-facebook-f mr-2"></i> Log In with Facebook</button>
                                 </form>
                             </div>
                         </div>
