--- a/web/profile-request.html
+++ b/web/profile-request.html
@@ -41,12 +41,13 @@
                 <div class="navbar-default sidebar" role="navigation">
                     <div class="sidebar-nav navbar-collapse">
                         <ul class="nav" id="side-menu">
-                            <li><a><div class="text-center"><span class="chat-img text-center"><img src="resources/img/boy.png" class="img-circle" height="95" width="95" /></span></div> <div class="text-center">{username}</div></a></li>
-                            <li><a href="#" class="active"><i class="fa fa-dashboard fa-fw"></i> Request</a></li>
+                            <li><a><div class="text-center"><span class="chat-img"><img src="resources/img/boy.png" class="img-circle" height="95" width="95" /></span></div> <div class="text-center">Jhef Son</div></a></li>
+                            <li><a href="#" class="active"><i class="fa fa-shopping-cart fa-fw"></i> Request</a></li>
                             <li><a href="#"><i class="fa fa-suitcase fa-fw"></i> Jobs</a></li>
                             <li><a href="#"><i class="fa fa-credit-card fa-fw"></i> Transaction</a></li>
                             <li><a href="#"><i class="fa fa-bell-o fa-fw"></i> Notification</a></li>
                             <li><a href="#"><i class="fa fa-cog fa-fw"></i> Settings</a></li>
+                            <li><a href="#"><i class="fa fa-question fa-fw"></i> Help</a></li>
                         </ul>
                     </div><!-- /.sidebar-collapse -->
                 </div><!-- /.navbar-static-side -->
@@ -56,22 +57,127 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h1 class="page-header">Blank</h1>
+                            <h1 class="page-header">Request</h1>
                         </div><!-- /.col-lg-12 -->
+                    </div><!-- /.row -->
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="panel panel-info">
+                                <div class="panel-heading"><h4><i class="fa fa-info-circle fa-fw"></i> Information</h4></div>
+                                <div class="panel-body">
+                                    <p class="lead">Helpy now allows you to match up with a helper on demand and have your tasks completed on time. Make your school life easier and leave the job to our polite helpy helpers.</p>
+                                    <button type="button" class="btn-lg btn-primary">Create Request</button>
+                                </div>
+                                <div class="panel-footer"></div>
+                            </div><!-- /.panel panel-info -->
+                        </div><!-- /.col-lg-12 -->
+                    </div><!-- /.row -->
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="panel panel-primary">
+                                <div class="panel-heading"><i class="fa fa-check-square-o fa-fw"></i> Active Requests</div>
+                                <div class="panel-body">
+                                    <div class="panel-group" id="activeAccordion">
+                                        <div class="panel panel-primary">
+                                            <div class="panel-heading">
+                                                <h4 class="panel-title">
+                                                    <a data-toggle="collapse" data-parent="#activeAccordion" href="#collapseOne">Job Title #1</a>
+                                                </h4>
+                                            </div>
+                                            <div id="collapseOne" class="panel-collapse collapse">
+                                                <div class="panel-body">
+                                                    <p>Time: July 17, 2018 13:00</p>
+                                                    <p>Expire: July 17, 2018 14:00</p>
+                                                    <p>Client: Jhef Son</p>
+                                                    <p>Helper: ---</p>
+                                                    <button type="button" class="btn btn-info btn-outline">Details</button>
+                                                    <button type="button" class="btn btn-warning btn-outline">Cancel</button>
+                                                </div>
+                                                <div class="panel-footer">Created at: July 17, 2018 13:00</div>
+                                            </div><!-- /#collapseOne -->
+                                        </div>
+                                        <div class="panel panel-primary">
+                                            <div class="panel-heading">
+                                                <h4 class="panel-title">
+                                                    <a data-toggle="collapse" data-parent="#activeAccordion" href="#collapseTwo">Job Title #2</a>
+                                                </h4>
+                                            </div>
+                                            <div id="collapseTwo" class="panel-collapse collapse">
+                                                <div class="panel-body">
+                                                    <p>Time: July 17, 2018 13:00</p>
+                                                    <p>Expire: July 17, 2018 14:00</p>
+                                                    <p>Client: Jhef Son</p>
+                                                    <p>Helper: ---</p>
+                                                    <button type="button" class="btn btn-info btn-outline">Details</button>
+                                                    <button type="button" class="btn btn-warning btn-outline">Cancel</button>
+                                                </div>
+                                                <div class="panel-footer">Created at: July 17, 2018 13:00</div>
+                                            </div><!-- /#collapseTwo -->
+                                        </div>
+                                    </div><!-- /.panel-group -->
+                                </div><!-- /.panel-body -->
+                                <div class="panel-footer">Active Requests</div>
+                            </div>
+                        </div><!-- /.col-lg-6 -->
+                        <div class="col-lg-6">
+                            <div class="panel panel-green">
+                                <div class="panel-heading"><i class="fa fa-clock-o fa-fw"></i> In Progress</div>
+                                <div class="panel-body">
+                                    <div class="panel-group" id="inProgressAccordion">
+                                        <div class="panel panel-primary">
+                                            <div class="panel-heading">
+                                                <h4 class="panel-title">
+                                                    <a data-toggle="collapse" data-parent="#inProgressAccordion" href="#collapseThree">Job Title #3</a>
+                                                </h4>
+                                            </div>
+                                            <div id="collapseThree" class="panel-collapse collapse">
+                                                <div class="panel-body">
+                                                    <p>Time: July 17, 2018 13:00</p>
+                                                    <p>Expire: July 17, 2018 14:00</p>
+                                                    <p>Client: Jhef Son</p>
+                                                    <p>Helper: Yuta Inoue</p>
+                                                    <button type="button" class="btn btn-info btn-outline">Details</button>
+                                                    <button type="button" class="btn btn-success btn-outline">Complete</button>
+                                                    <button type="button" class="btn btn-warning btn-outline">Cancel</button>
+                                                </div>
+                                                <div class="panel-footer">Created at: July 17, 2018 13:00</div>
+                                            </div>
+                                        </div>
+                                        <div class="panel panel-yellow">
+                                            <div class="panel-heading">
+                                                <h4 class="panel-title">
+                                                    <a data-toggle="collapse" data-parent="#inProgressAccordion" href="#collapseFour">Job Title #4</a>
+                                                </h4>
+                                            </div>
+                                            <div id="collapseFour" class="panel-collapse collapse">
+                                                <div class="panel-body">
+                                                    <p>Time: July 17, 2018 13:00</p>
+                                                    <p>Expire: July 17, 2018 14:00</p>
+                                                    <p>Client: Yuta Inoue</p>
+                                                    <p>Helper: Jhef Son</p>
+                                                    <button type="button" class="btn btn-info btn-outline">Details</button>
+                                                    <button type="button" class="btn btn-success btn-outline">Complete</button>
+                                                    <button type="button" class="btn btn-warning btn-outline">Cancel</button>
+                                                </div>
+                                                <div class="panel-footer">Created at: July 17, 2018 13:00</div>
+                                            </div>
+                                        </div>
+                                    </div><!-- /.panel-group -->
+                                </div><!-- /.panel-body -->
+                                <div class="panel-footer">In Progress</div>
+                            </div>
+                        </div><!-- /.col-lg-6 -->
                     </div><!-- /.row -->
                 </div><!-- /.container-fluid -->
             </div><!-- /#page-wrapper -->
-            
+
         </div><!-- /#wrapper -->
         <!-- jQuery -->
         <script src="resources/sbadmin/vendor/jquery/jquery.min.js"></script>
-
         <!-- Bootstrap Core JavaScript -->
         <script src="resources/sbadmin/vendor/bootstrap/js/bootstrap.min.js"></script>
-
         <!-- Metis Menu Plugin JavaScript -->
         <script src="resources/sbadmin/vendor/metisMenu/metisMenu.min.js"></script>
-
         <!-- Custom Theme JavaScript -->
         <script src="resources/sbadmin/dist/js/sb-admin-2.js"></script>
     </body>
