Fix the href links.

--- a/web/pages/profile-request.html
+++ b/web/pages/profile-request.html
@@ -6,13 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="resources/img/LG_Logo White.png" />
         <!-- Bootstrap Core CSS -->
-        <link href="resources/sbadmin/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="../resources/sbadmin/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <!-- MetisMenu CSS -->
-        <link href="resources/sbadmin/vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
+        <link href="../resources/sbadmin/vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
         <!-- Custom CSS -->
-        <link href="resources/sbadmin/dist/css/sb-admin-2.css" rel="stylesheet">
+        <link href="../resources/sbadmin/dist/css/sb-admin-2.css" rel="stylesheet">
         <!-- Custom Fonts -->
-        <link href="resources/sbadmin/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <link href="../resources/sbadmin/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <div id="wrapper">
@@ -173,12 +173,12 @@
 
         </div><!-- /#wrapper -->
         <!-- jQuery -->
-        <script src="resources/sbadmin/vendor/jquery/jquery.min.js"></script>
+        <script src="../resources/sbadmin/vendor/jquery/jquery.min.js"></script>
         <!-- Bootstrap Core JavaScript -->
-        <script src="resources/sbadmin/vendor/bootstrap/js/bootstrap.min.js"></script>
+        <script src="../resources/sbadmin/vendor/bootstrap/js/bootstrap.min.js"></script>
         <!-- Metis Menu Plugin JavaScript -->
-        <script src="resources/sbadmin/vendor/metisMenu/metisMenu.min.js"></script>
+        <script src="../resources/sbadmin/vendor/metisMenu/metisMenu.min.js"></script>
         <!-- Custom Theme JavaScript -->
-        <script src="resources/sbadmin/dist/js/sb-admin-2.js"></script>
+        <script src="../resources/sbadmin/dist/js/sb-admin-2.js"></script>
     </body>
 </html>
