--- a/web/pages/profile-request.html
+++ b/web/pages/profile-request.html
@@ -41,7 +41,7 @@
                 <div class="navbar-default sidebar" role="navigation">
                     <div class="sidebar-nav navbar-collapse">
                         <ul class="nav" id="side-menu">
-                            <li><a><div class="text-center"><span class="chat-img"><img src="resources/img/boy.png" class="img-circle" height="95" width="95" /></span></div> <div class="text-center">Jhef Son</div></a></li>
+                            <li><a><div class="text-center"><span class="chat-img"><img src="../resources/img/boy.png" class="img-circle" height="95" width="95" /></span></div> <div class="text-center">Jhef Son</div></a></li>
                             <li><a href="#" class="active"><i class="fa fa-shopping-cart fa-fw"></i> Request</a></li>
                             <li><a href="#"><i class="fa fa-suitcase fa-fw"></i> Jobs</a></li>
                             <li><a href="#"><i class="fa fa-credit-card fa-fw"></i> Transaction</a></li>
