--- a/web/pages/profile-request.html
+++ b/web/pages/profile-request.html
@@ -25,7 +25,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="profile-request.html">
                         <p style="color:black; font-family:Ubuntu; font-weight:bolder; letter-spacing:-2.0px; font-size: 180%!important; margin-top:-5%!important; margin-bottom:-5%!important;" >
                             help<span class="text-primary">y</span> now
                         </p>
@@ -42,13 +42,19 @@
                     <div class="sidebar-nav navbar-collapse">
                         <ul class="nav" id="side-menu">
                             <li><a><div class="text-center"><span class="chat-img"><img src="../resources/img/boy.png" class="img-circle" height="95" width="95" /></span></div> <div class="text-center">Jhef Son</div></a></li>
-                            <li><a href="#" class="active"><i class="fa fa-shopping-cart fa-fw"></i> Request</a></li>
+                            <li><a href="#" class="active"><i class="fa fa-shopping-cart fa-fw"></i> Request<span class="fa arrow"></span></a>
+                                <ul class="nav nav-second-level">
+                                    <li><a href="profile-request.html#activeAccordion"><i class="fa fa-check-square fa-fw"></i> Active Jobs</a></li>
+                                    <li><a href="profile-request.html#inProgressAccordion"><i class="fa fa-clock-o"></i> In Progress</a></li>
+                                    <li><a href="profile-request.html#acceptedAccordion"><i class="fa fa-check-circle"></i> Accepted Jobs</a></li>
+                                </ul><!-- /.nav-second-level -->
+                            </li>
                             <li><a href="#"><i class="fa fa-suitcase fa-fw"></i> Jobs</a></li>
                             <li><a href="#"><i class="fa fa-credit-card fa-fw"></i> Transaction</a></li>
                             <li><a href="#"><i class="fa fa-bell-o fa-fw"></i> Notification</a></li>
-                            <li><a href="#"><i class="fa fa-cog fa-fw"></i> Settings</a></li>
+                            <li><a href="#"><i class="fa fa-cog fa-fw"></i> Account Settings</a></li>
                             <li><a href="#"><i class="fa fa-question fa-fw"></i> Help</a></li>
-                        </ul>
+                        </ul><!-- /.nav -->
                     </div><!-- /.sidebar-collapse -->
                 </div><!-- /.navbar-static-side -->
             </nav>
@@ -124,7 +130,7 @@
                                 <div class="panel-heading"><i class="fa fa-clock-o fa-fw"></i> In Progress</div>
                                 <div class="panel-body">
                                     <div class="panel-group" id="inProgressAccordion">
-                                        <div class="panel panel-primary">
+                                        <div class="panel panel-green">
                                             <div class="panel-heading">
                                                 <h4 class="panel-title">
                                                     <a data-toggle="collapse" data-parent="#inProgressAccordion" href="#collapseThree">Job Title #3</a>
@@ -143,13 +149,44 @@
                                                 <div class="panel-footer">Created at: July 17, 2018 13:00</div>
                                             </div>
                                         </div>
-                                        <div class="panel panel-yellow">
+                                        <div class="panel panel-green">
                                             <div class="panel-heading">
                                                 <h4 class="panel-title">
                                                     <a data-toggle="collapse" data-parent="#inProgressAccordion" href="#collapseFour">Job Title #4</a>
                                                 </h4>
                                             </div>
                                             <div id="collapseFour" class="panel-collapse collapse">
+                                                <div class="panel-body">
+                                                    <p>Time: July 17, 2018 13:00</p>
+                                                    <p>Expire: July 17, 2018 14:00</p>
+                                                    <p>Client: Jhef Son</p>
+                                                    <p>Helper: Yuta Inoue</p>
+                                                    <button type="button" class="btn btn-info btn-outline">Details</button>
+                                                    <button type="button" class="btn btn-success btn-outline">Complete</button>
+                                                    <button type="button" class="btn btn-warning btn-outline">Cancel</button>
+                                                </div>
+                                                <div class="panel-footer">Created at: July 17, 2018 13:00</div>
+                                            </div>
+                                        </div>
+                                    </div><!-- /.panel-group -->
+                                </div><!-- /.panel-body -->
+                                <div class="panel-footer">In Progress</div>
+                            </div><!-- /.panel-green -->
+                        </div><!-- /.col-lg-6 -->
+                    </div><!-- /.row -->
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="panel panel-yellow">
+                                <div class="panel-heading"><i class="fa fa-check-circle fa-fw"></i> Accepted Jobs</div>
+                                <div class="panel-body">
+                                    <div class="panel-group" id="acceptedAccordion">
+                                        <div class="panel panel-yellow">
+                                            <div class="panel-heading">
+                                                <h4 class="panel-title">
+                                                    <a data-toggle="collapse" data-parent="#acceptedAccordion" href="#collapseFive">Job Title #5</a>
+                                                </h4>
+                                            </div>
+                                            <div id="collapseFive" class="panel-collapse collapse">
                                                 <div class="panel-body">
                                                     <p>Time: July 17, 2018 13:00</p>
                                                     <p>Expire: July 17, 2018 14:00</p>
@@ -162,10 +199,29 @@
                                                 <div class="panel-footer">Created at: July 17, 2018 13:00</div>
                                             </div>
                                         </div>
+                                        <div class="panel panel-yellow">
+                                            <div class="panel-heading">
+                                                <h4 class="panel-title">
+                                                    <a data-toggle="collapse" data-parent="#acceptedAccordion" href="#collapseSix">Job Title #6</a>
+                                                </h4>
+                                            </div>
+                                            <div id="collapseSix" class="panel-collapse collapse">
+                                                <div class="panel-body">
+                                                    <p>Time: July 17, 2018 13:00</p>
+                                                    <p>Expire: July 17, 2018 14:00</p>
+                                                    <p>Client: Jhef Son</p>
+                                                    <p>Helper: Yuta Inoue</p>
+                                                    <button type="button" class="btn btn-info btn-outline">Details</button>
+                                                    <button type="button" class="btn btn-success btn-outline">Complete</button>
+                                                    <button type="button" class="btn btn-warning btn-outline">Cancel</button>
+                                                </div>
+                                                <div class="panel-footer">Created at: July 17, 2018 13:00</div>
+                                            </div>
+                                        </div>
                                     </div><!-- /.panel-group -->
                                 </div><!-- /.panel-body -->
-                                <div class="panel-footer">In Progress</div>
-                            </div>
+                                <div class="panel-footer">Accepted Jobs</div>
+                            </div><!-- /.panel-green -->
                         </div><!-- /.col-lg-6 -->
                     </div><!-- /.row -->
                 </div><!-- /.container-fluid -->
