Completed the "create job" forms. Just need buttons which I will ask advices from an UX expert on how to add the complete form buttons.

--- a/web/pages/profile-request.html
+++ b/web/pages/profile-request.html
@@ -234,7 +234,7 @@
                     </div><!-- /.row -->
                 </div><!-- /.container-fluid -->
                 <div style="position: fixed; bottom: 20px; right: 20px">
-                    <button type="button" class="scrollToTop btn btn-danger btn-circle btn-lg"><i class="fa fa-chevron-up"></i></button>
+                    <button type="button" class="scrollToTop btn btn-primary btn-circle btn-lg"><i class="fa fa-chevron-up"></i></button>
                 </div>
             </div><!-- /#page-wrapper -->
         </div><!-- /#wrapper -->
